# Distributed-Bomberman

./: .gitignore  README.md  pyproject.toml  start.sh
src/client/: game.py  mainClient.py
src/client/controller/: game_controller.py
src/client/model/: game_state.py
src/client/network/: client_network.py
src/client/view/: base_view.py  connecting_view.py  game_view.py  lobby_view.py  text_utils.py  victory_view.py
src/common/: constants.py
src/server/: __init__.py  core.py  game.py  game_logic.py  mainServer.py  models.py  network.py
src/server/controller/: command_controller.py
src/server/fault_tolerance/: __init__.py  auto_spawner.py  backup_server.py  failure_detector.py  primary_server.py  proxy_server.py
src/server/network/: server_network.py
src/server/services/: game_service.py
src/test/: run_tests.py  test_controller.py  test_core.py  test_game.py  test_game_service.py  test_state_codec.py
